--- a/app/src/main/res/layout/recyclerview_chi_item.xml
+++ b/app/src/main/res/layout/recyclerview_chi_item.xml
@@ -43,7 +43,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/ivEdit"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_menu_camera" />
+            app:srcCompat="@drawable/baseline_mode_edit_outline_24" />
 
         <TextView
             android:id="@+id/tvAmount"
