--- a/app/src/main/res/layout/fragment_loai_chi.xml
+++ b/app/src/main/res/layout/fragment_loai_chi.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.chi.LoaiChiFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+        android:id="@+id/rV2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
